# housing-generator

./: .gitignore  INICIO.html  README.md  README_MVP.md  instalar.bat  instalar.sh  pyproject.toml  vulture_whitelist.py
docs/: COMO_FUNCIONA.md  CONTINUIDAD.md  GUIA_USO.md  README.md  architecture.md  niveles_plantas.md  relaciones_espaciales.md
docs/calidad/: fitness-functions.md
docs/fuentes/: niveles_plantas.md  relaciones_espaciales.md
docs/historico/: architecture.md
docs/visualizador/: plano_viewer.html  py_bundle.js  relaciones_espaciales.css  relaciones_espaciales.html  relaciones_espaciales.js
examples/: sample_program.json
html/: py_bundle.js  relaciones_espaciales.css  relaciones_espaciales.html
html/js/: 00-shared.js  00b-parcela.js  01-matriz.js  02-seccion.js  04-sinergias.js  05-visor.js  06-pyodide.js  09-init.js
scripts/: regenerar_bundle_pyodide.py
tests/integration/: test_browser_bridge.py  test_btree_layout_generator.py  test_cli.py  test_generate_building.py  test_generate_layout_use_case.py  test_generate_layout_use_case_v2.py  test_mvp.py  test_seleccion_plantas_importer_integration.py  test_type_adjacency_catalog_integration.py
tests/unit/: test_adjacency_constraint_validator.py  test_adjacency_graph.py  test_adjacency_requirement.py  test_altura_libre_validator.py  test_ancho_libre_estancia_validator.py  test_ancho_libre_pasillo_validator.py  test_ancho_libre_practico_validator.py  test_area_objetivo_validator.py  test_bano_acceso_validator.py  test_btree_layout_generator_shared_stair.py  test_btree_partition.py  test_lot.py  (+52 more)
(+104 files in other folders)
